tests/errors/c/id-basetype-missing-id-in-macro.h
#define m int a; int b; c;
m
